admin home page chart setup

--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               "src/assets/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
