--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bootstrap": "^4.1.2",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "datatables.net": "^1.10.19",
+    "datatables.net-bs4": "^1.10.19",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
     "ng2-smart-table": "^1.3.5",
@@ -37,6 +39,7 @@
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "grunt": "^1.0.3",
